Start Kondankai Add Link of kondankai application

--- a/data/news.yaml
+++ b/data/news.yaml
@@ -1,3 +1,6 @@
+- date: "2025/05/07"
+  message: '<a href="kondankai.html">第3回学生・企業/研究機関懇談会</a>の申込を開始しました。'
+
 - date: "2025/04/22"
   message: '事前参加登録を開始しました'
 
