--- a/data/news.yaml
+++ b/data/news.yaml
@@ -1,3 +1,6 @@
+- date: "2025/05/09"
+  message: '発表申し込み締め切りが<b>5/14(水)24時</b>に延長されました。'
+
 - date: "2025/05/07"
   message: '<a href="kondankai.html">第3回学生・企業/研究機関懇談会</a>の申込を開始しました。'
 
