--- a/data/news.yaml
+++ b/data/news.yaml
@@ -1,3 +1,6 @@
+- date: "2025/05/15"
+  message: 'ポスター発表申込締め切りが<b>5/21(水)24時</b>に延長されました。(口頭発表は受付終了)'
+
 - date: "2025/05/09"
   message: '発表申し込み締め切りが<b>5/14(水)24時</b>に延長されました。'
 
