--- a/data/news.yaml
+++ b/data/news.yaml
@@ -1,3 +1,9 @@
+- date: "2025/06/24"
+  message: '特別講演（公開講座）の情報を更新致しました。'
+
+- date: "2025/06/24"
+  message: '託児所案内の情報を更新致しました。'
+
 - date: "2025/05/15"
   message: 'ポスター発表申込締め切りが<b>5/21(水)24時</b>に延長されました。(口頭発表は受付終了)'
 
