--- a/data/news.yaml
+++ b/data/news.yaml
@@ -1,3 +1,6 @@
+- date: "2025/06/25"
+  message: '<a href="informal_meeting.html">インフォーマルミーティング</a>の情報を追加致しました。'
+
 - date: "2025/06/24"
   message: '<a href="special_lecture.html">特別講演（公開講座）</a>の情報を更新致しました。'
 
