3rdサーキュラーの情報に合わせてページを更新 1. インフォーマルミーティング 2. 参加要領ページ更新 3. 発表要領ページ追加 4. プロシーディングスページ追加（発表申込要領から分離）

--- a/data/news.yaml
+++ b/data/news.yaml
@@ -1,4 +1,10 @@
-- date: "2025/06/25"
+- date: "2025/06/30"
+  message: '<a href="presentation.html">発表要領</a>の情報を追加致しました。'
+
+- date: "2025/06/30"
+  message: '<a href="third_circular.html">第３回サーキュラー</a>配信'
+
+- date: "2025/06/30"
   message: '<a href="informal_meeting.html">インフォーマルミーティング</a>の情報を追加致しました。'
 
 - date: "2025/06/24"
