--- a/data/news.yaml
+++ b/data/news.yaml
@@ -1,3 +1,6 @@
+- date: "2025/07/08"
+  message: 第3回学生・企業/研究機関懇談会の'<a href="kondankai-corplist.html">企業/研究機関一覧</a>を追加致しました。'
+
 - date: "2025/06/30"
   message: '<a href="presentation.html">発表要領</a>の情報を追加致しました。'
 
