プログラムタイムテーブルを公開

--- a/data/news.yaml
+++ b/data/news.yaml
@@ -1,3 +1,6 @@
+- date: "2025/07/15"
+  message: '<a href="program.html">タイムテーブル・プログラム</a>を公開しました。'
+
 - date: "2025/07/08"
   message: '第3回学生・企業/研究機関懇談会の<a href="kondankai-corplist.html">企業/研究機関一覧</a>を追加致しました。'
 
