Add Industrial List

--- a/data/news.yaml
+++ b/data/news.yaml
@@ -1,3 +1,6 @@
+- date: "2025/07/30"
+  message: '<a href="industrial.html">出展企業一覧</a>を公開しました。'
+
 - date: "2025/07/15"
   message: '<a href="program.html">タイムテーブル・プログラム</a>を公開しました。'
 
