--- a/data/news.yaml
+++ b/data/news.yaml
@@ -1,4 +1,7 @@
 - date: "2025/07/30"
+  message: '<a href="access.html">アクセス</a>に会場マップを追加しました。'
+
+- date: "2025/07/30"
   message: '<a href="industrial.html">出展企業一覧</a>を公開しました。'
 
 - date: "2025/07/15"
