Extended Submission Deadline

--- a/data/news.yaml
+++ b/data/news.yaml
@@ -1,3 +1,6 @@
+- date: "2025/08/19"
+  message: 'プロシーディングス提出期限が8月31日に延長されました。'
+  
 - date: "2025/07/30"
   message: '<a href="access.html">アクセス</a>に会場マップを追加しました。'
 
